<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.chobit</groupId>
        <artifactId>oss-parent</artifactId>
        <version>0.1.2</version>
    </parent>

    <groupId>com.zhyea.argo</groupId>
    <artifactId>argo-server</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- project -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>21</java.version>

        <!-- dependency version -->
        <lombok.version>1.18.38</lombok.version>
        <zhy-commons.version>0.1.3.10</zhy-commons.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <h2.version>2.1.214</h2.version>
        <jackson.version>2.18.3</jackson.version>
    </properties>

    <dependencies>
    </dependencies>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>3.4.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project -->
            <dependency>
                <groupId>com.zhyea.argo</groupId>
                <artifactId>argo-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhyea.argo</groupId>
                <artifactId>argo-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhyea.argo</groupId>
                <artifactId>argo-cms</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zhyea.argo</groupId>
                <artifactId>argo-biz</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- database -->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>2.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>3.0.4</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>

            <!-- tools -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.chobit.spring</groupId>
                <artifactId>zhy-spring-boot-autoconfigure</artifactId>
                <version>0.0.8</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>3.1.1</version>
            </dependency>
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>6.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>8.0.2.Final</version>
            </dependency>

            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>1.80</version>
            </dependency>

            <dependency>
                <groupId>com.jayway.jsonpath</groupId>
                <artifactId>json-path</artifactId>
                <version>2.9.0</version>
            </dependency>

            <dependency>
                <groupId>org.chobit.commons</groupId>
                <artifactId>common-model</artifactId>
                <version>${zhy-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.chobit.commons</groupId>
                <artifactId>common-utils</artifactId>
                <version>${zhy-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.chobit.commons</groupId>
                <artifactId>common-validator</artifactId>
                <version>${zhy-commons.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <modules>
        <module>argo-common</module>
        <module>argo-data</module>
        <module>argo-biz</module>
        <module>argo-admin</module>
        <module>argo-cms</module>
        <module>argo-api</module>
    </modules>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                        <!-- other annotation processors -->
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
